link syle to index

--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <head>
     <title>serve staticdocs nodejs expressjs</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <h1>From a static file.</h1>
