--- a/public/help.html
+++ b/public/help.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <head>
     <title>serve staticdocs nodejs expressjs</title>
+    <link rel="stylesheet" href="./css/style.css">
+
 </head>
 <body>
     <h1>Help</h1>
