--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <head>
     <title>serve staticdocs nodejs expressjs</title>
     <link rel="stylesheet" href="./css/style.css">
+    <script src="./js/app.js"></script>
 </head>
 <body>
     <h1>From a static file.</h1>
